# MatrixCurator

./: .gitignore  .gitmodules  .runemodules  AGENTS.md  Dockerfile  LICENSE  README.md  build.sh  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py
.agents/skills/docling/: SKILL.md
.agents/skills/docs/: SKILL.md
.agents/skills/dspy/: SKILL.md
.agents/skills/langchain/: SKILL.md
.agents/skills/langfuse/: SKILL.md
.agents/skills/langfuse-docs/: SKILL.md
.agents/skills/langgraph/: SKILL.md
.agents/skills/litellm/: SKILL.md
.agents/skills/python-logging/: SKILL.md
.github/: pull_request_template.md
.roo/rules/language-python/: architecture-and-structure.md
.rune/: config
.streamlit/: secrets_template.toml
apps/fastapi/: pyproject.toml
apps/fastapi/src/: main.py
apps/matrixcurator-api/: pyproject.toml
apps/matrixcurator-api/src/: dependencies.py  main.py
apps/matrixcurator-api/src/routers/: agent.py  document.py
apps/matrixcurator-api/tests/integration/: test_agent_routes.py  test_document_routes.py
apps/matrixcurator-benchmark/: pyproject.toml
apps/matrixcurator-benchmark/src/matrixcurator_benchmark/: __main__.py  agents.py  confbenchmark.py  exceptions.py  retrieval.py  services.py  setup.py  tools.py
apps/matrixcurator-benchmark/src/matrixcurator_benchmark/config/: main.py
apps/matrixcurator-benchmark/src/matrixcurator_benchmark/core/: __init__.py  decorators.py  execution.py  fixtures.py  registry.py  runner.py
apps/matrixcurator-benchmark/src/matrixcurator_benchmark/data/: character_states.parquet
apps/matrixcurator-benchmark/src/matrixcurator_benchmark/modules/dataset/: services.py
apps/matrixcurator-benchmark/src/matrixcurator_benchmark/modules/dataset/repositories/: langfuse.py
apps/matrixcurator-benchmark/src/matrixcurator_benchmark/modules/evaluation/: services.py
apps/matrixcurator-benchmark/src/matrixcurator_benchmark/modules/evaluation/repositories/: langfuse.py
apps/matrixcurator-benchmark/src/matrixcurator_benchmark/modules/retrieval/: services.py
apps/matrixcurator-benchmark/tests/integration/matrixcurator_benchmark/: test_benchmark_runner_integration.py  test_retrieval.py
apps/matrixcurator-benchmark/tests/unit/matrixcurator_benchmark/: test_benchmark_tools.py  test_confbenchmark.py  test_services.py  test_setup.py  test_tools.py
apps/matrixcurator-benchmark/tests/unit/matrixcurator_benchmark/core/: test_decorators.py  test_execution.py  test_fixtures.py  test_runner.py
apps/matrixcurator-benchmark/tests/unit/matrixcurator_benchmark/modules/dataset/: test_services.py
apps/matrixcurator-benchmark/tests/unit/matrixcurator_benchmark/modules/retrieval/: test_services.py
apps/matrixcurator-ui/: pyproject.toml
apps/streamlit/: pyproject.toml
apps/streamlit/src/: main.py
apps/streamlit/tests/: test_app.py
backend/apps/doc/: main.py  utils.py
backend/apps/langchain/: main.py
backend/data/: app.db
scripts/: __init__.py  compile_state.py
scripts/tests/e2e/: test_compile_state.py
scripts/tests/integration/: test_compile_state.py
scripts/tests/unit/: test_compile_state.py
src/: __init__.py  config.py  exceptions.py  main.py  streamlit_app.py  utils.py
src/benchmark/: __main__.py  agents_benchmark.py  benchmark_agents.py  benchmark_retrieval.py  benchmark_tools.py  confbenchmark.py  evaluate.py  retrieval_benchmark.py  tools_benchmark.py
src/benchmark/config/: main.py
src/benchmark/core/: __init__.py  decorators.py  exceptions.py  execution.py  fixtures.py  runner.py
src/config/: logging.py  main.py
src/integrations/: langfuse.py  posthog.py  sentry.py
src/llm/: __init__.py  external_service.py  services.py
src/modules/agent/: graph.py  memory.py  nodes.py  router.py  schemas.py
src/modules/document/: router.py  schemas.py  services.py
src/nex/: __init__.py  services.py
src/parser/: __init__.py  external_services.py  services.py  utils.py
tests/integration/api/: test_agent_routes.py  test_document_routes.py
tests/integration/benchmark/: test_benchmark_runner_integration.py
tests/unit/benchmark/: test_benchmark_tools.py  test_confbenchmark.py  test_tools_benchmark.py
tests/unit/config/: test_logging.py
(+26 files in other folders)
