[project]
name = "matrixcurator-workspace"
version = "2025.7.4"
authors = [
    { name = "Shreya Jariwala", email = "sjariwala@morphobank.org" },
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pdm]
distribution = false

[tool.pdm.workspace]
members = ["packages/*", "apps/*"]
