[project]
name = "matrixcurator-workspace"
version = "2025.7.4"
authors = [
    { name = "Shreya Jariwala", email = "sjariwala@morphobank.org" },
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pdm]
distribution = false

[tool.pdm.workspace]
members = ["packages/*", "apps/*"]

[tool.pdm.build]
excludes = ["third_party/**"]

# Ignore in Ruff (Linter & Formatter)
[tool.ruff]
exclude = ["third_party"]

# Ignore in Mypy (Type Checker)
[tool.mypy]
exclude = ["^third_party/"]

# Ignore in Pytest (Test Runner)
[tool.pytest.ini_options]
norecursedirs = ["third_party"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
