[project]
name = "matrixcurator-workspace"
version = "2025.7.4"
authors = [
    { name = "Shreya Jariwala", email = "sjariwala@morphobank.org" },
]
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.4.0",
    "langfuse>=4.9.1",
    "tenacity>=9.1.4",
    "sqlite-vec>=0.1.10a4",
    "sqlalchemy>=2.1.0b2",
    "nest-asyncio>=1.6.0",
    "tqdm>=4.68.3",
    "lume @ git+https://github.com/morphobankorg/lume-python.git",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
benchmark = { cmd = "python -m matrixcurator_benchmark", env = { PYTHONPATH = "apps/matrixcurator-benchmark/src" } }

[tool.pdm.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.workspace]
members = ["packages/matrixcurator", "apps/matrixcurator-api", "apps/matrixcurator-ui", "apps/matrixcurator-benchmark"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pyrefly>=1.1.1",
]
